--- a/package.json
+++ b/package.json
@@ -7,23 +7,31 @@
     "build": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide"
+    "postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@astrojs/svelte": "^7.0.3",
-    "@astrojs/tailwind": "^5.1.4",
     "@inlang/paraglide-astro": "^0.3.3",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
     "astro": "^5.1.2",
-    "svelte": "^5.16.1",
-    "tailwindcss": "^3.4.17",
+    "svelte": "^5.16.2",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.3",
     "@inlang/paraglide-js": "1.11.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-svelte-csf": "^5.0.0-next.21",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/svelte": "^8.4.7",
+    "@storybook/svelte-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.9"
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "storybook": "^8.4.7"
   }
 }
